# nothiring

./: README.md  data_utils.py
EDA/: analysis.ipynb
nothiring/: README.md  Untitled.ipynb  pyproject.toml
nothiring/conf/base/: catalog.yml  parameters.yml
nothiring/src/nothiring/: __init__.py  __main__.py  import_data_pipeline.py  pipeline_registry.py  settings.py
nothiring/src/nothiring/pipelines/import_data/: pipeline.py
nothiring/src/nothiring/pipelines/utils/: import_drive.py  import_local.py
